--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/platform-express": "^11.0.1",
+    "axios": "^1.8.3",
     "openai": "^4.86.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
